testsuite/tests/builtins/str_methods/substring/both_pos_and_named/test.out
Error: Both positional and named value
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(s.substring(1, 2, low=1))
   │       ────────────┬───────────  
   │                   ╰───────────── The parameter "low" has been provided a positional and a named value
───╯
